--- a/explorer/public/squid.html
+++ b/explorer/public/squid.html
@@ -296,12 +296,13 @@
                         <option value="arbitrum">Arbitrum</option>
                     </select>
                 </div>
-                
+
                 <div class="form-group">
                     <label for="fromToken">源链跨链代币：</label>
                     <select id="fromToken" name="fromToken" required>
                         <option value="">请选择跨链代币</option>
                         <option value="eth">ETH(WETH)</option>
+                        <option value="usdc">USDC</option>
                     </select>
                 </div>
                 
