--- a/explorer/public/stargate.html
+++ b/explorer/public/stargate.html
@@ -300,6 +300,7 @@
                 <select id="fromToken" name="fromToken" required>
                     <option value="">请选择跨链代币</option>
                     <option value="eth">ETH(WETH)</option>
+                    <option value="usdc">USDC</option>
                 </select>
             </div>
 
